--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -7,6 +7,7 @@
   max-width: 576px;
   height: auto;
 }
+
 .gemmaImage,
 .catherineImage {
   width: 100%;
@@ -15,6 +16,10 @@
   margin: 0 20px 20px 0;
   max-width: 576px;
   height: auto;
+}
+
+.gemmaImage {
+  float: left !important;
 }
 
 .underline {
