--- a/src/app/services/services.css
+++ b/src/app/services/services.css
@@ -14,6 +14,7 @@
   text-align: center;
   transition: background-color 0.2s;
 }
+
 #button {
   background-color: #42f5e9;
   z-index: 20;
@@ -26,14 +27,29 @@
   margin-top: 8rem;
   transition: background-color 0.2s;
 }
+
 #textBox:hover {
   background-color: #42f5e9;
 }
-#textBox:hover ~ #button {
+
+#textBox:hover~#button {
   background-color: white;
 }
+
 #button:hover {
   background-color: white;
+}
+
+.customClass {
+  height: 300px;
+  width: 400px;
+}
+
+@media screen and (max-width: 450px) {
+  .customClass {
+    height: 200px;
+    width: 270px;
+  }
 }
 
 @media screen and (max-width: 767px) {
