--- a/src/app/services/services.css
+++ b/src/app/services/services.css
@@ -57,3 +57,16 @@
     margin-top: 10rem;
   }
 }
+
+@media (min-width: 1024px) {
+  .bannerClass {
+    padding: 0 !important;
+    background-size: contain !important
+  }
+}
+
+@media (min-width: 1280px) {
+  .bannerClass {
+    background-size: contain !important
+  }
+}
