--- a/src/app/about/imageslider/imageSlider.css
+++ b/src/app/about/imageslider/imageSlider.css
@@ -64,13 +64,6 @@
   /* Optional, to hide overflow if needed */
 }
 
-
-/* @media (max-width: 1440px) {
-  .slider-button.right {
-    right: 54px;
-  }
-} */
-
 @media (min-width: 767px) and (max-width: 1279px) {
   .slider-button.right {
     right: 0;
@@ -99,4 +92,44 @@
   .slider-button.left {
     left: 7px;
   }
+
+  .fixImageSize {
+    margin: auto;
+    padding: 0;
+  }
+
+  .slider-button.right {
+    right: 6px;
+  }
+}
+
+@media (max-width: 462px) {
+  .fixImageSize {
+    width: 300px !important;
+    height: 300px !important;
+    overflow: hidden;
+    padding: 0;
+    /* Optional, to hide overflow if needed */
+  }
+
+  .slider-button.right {
+    right: 0;
+  }
+
+}
+
+
+.image-slide {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  position: absolute;
+  /* Ensure all slides stack on top of each other */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.image-slide.active {
+  opacity: 1;
 }
