Banner Images fixed

--- a/src/app/(home)/commission-terms/commission.css
+++ b/src/app/(home)/commission-terms/commission.css
@@ -1,7 +1,17 @@
-/* .bannerImageClass {
-  width: 100%;
-  height: 100%;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  padding: 19% 0;
-} */
+@media (max-width: 767px) {
+  .CommissionTermsbannerImageClass {
+    height: auto !important;
+    background-position: center;
+    padding: 22% 0;
+  }
+
+  #button {
+    margin-top: 10rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .CommissionTermsbannerImageClass {
+    padding: 40% 0;
+  }
+}
