--- a/src/app/terms-of-business/terms.css
+++ b/src/app/terms-of-business/terms.css
@@ -1,4 +1,4 @@
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
     .bannerClass {
         padding: 0 !important;
         background-size: contain !important
@@ -8,5 +8,24 @@
 @media (min-width: 1280px) {
     .bannerClass {
         background-size: contain !important
+    }
+} */
+
+
+@media (max-width: 767px) {
+    .TermsOfBusinessbannerClass {
+        height: auto !important;
+        background-position: center;
+        padding: 22% 0;
+    }
+
+    #button {
+        margin-top: 10rem;
+    }
+}
+
+@media (max-width: 600px) {
+    .TermsOfBusinessbannerClass {
+        padding: 25% 0;
     }
 }
