Added border in header

--- a/src/app/(home)/home.css
+++ b/src/app/(home)/home.css
@@ -120,6 +120,8 @@
   .customFontSize {
     font-size: 20px !important;
     font-weight: 600 !important;
+    background: black !important;
+    color: #ffffff !important;
   }
 }
 
