--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -37,6 +37,24 @@
   height: 270px !important;
   object-fit: cover;
   object-position: top;
+  border: 3px solid white;
+}
+
+.image-wrapper {
+  position: relative;
+}
+
+.image-label {
+  position: absolute;
+  top: 95%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(255, 255, 255, 1);
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: bold;
+  width: 100%;
 }
 
 @media (max-width: 767px) {
