--- a/src/app/(home)/home.css
+++ b/src/app/(home)/home.css
@@ -106,6 +106,24 @@
   z-index: -1;
 } */
 
+.image-container {
+  position: relative;
+  width: 100%;
+  padding-top: 75%;
+  /* This gives a 4:3 aspect ratio; adjust as needed */
+}
+
+.image-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* Keeps the image cover */
+}
+
+
 .postionRelative {
   position: relative;
   top: 65%;
