--- a/src/app/services/services.css
+++ b/src/app/services/services.css
@@ -1,3 +1,20 @@
+.image-container {
+  position: relative;
+  width: 100%;
+  padding-top: 75%;
+  /* This gives a 4:3 aspect ratio; adjust as needed */
+}
+
+.image-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* Keeps the image cover */
+}
+
 #textBox {
   position: absolute;
   font-size: 1.5rem;
